<resources>
    <string name="app_name">Guildes App</string>

    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="nav_header_title">SC Mobile</string>
    <string name="nav_header_subtitle">mobile.maroc@sqli.com</string>
    <string name="nav_header_desc">En-tête de navigation</string>
    <string name="action_settings">Paramètre</string>
    <string name="drawer_menu_import">Importer</string>
    <string name="drawer_menu_gallery">Galerie</string>
    <string name="drawer_menu_presentation">Présentation</string>
    <string name="drawer_menu_tools">Outils</string>
    <string name="drawer_menu_communicate">Communiquer</string>
    <string name="drawer_menu_share">Partager</string>
    <string name="drawer_menu_send">Envoyer</string>

    <string name="analytics_main_screen">Ecran principal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_username_password">Please provide a valid email and password.</string>
    <string name="home">Home</string>
    <string name="my_guilde">My Guilde</string>
    <string name="my_contributions">My Contributions</string>
    <string name="make_contribution">Make Contribution</string>
    <string name="all_contributions">All Contributions</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="guilde_logo">Guilde logo</string>
    <string name="view_all">View All</string>
    <string name="view_less">View Less</string>
    <string name="contributors">Contributors</string>
    <string name="points">Points</string>
    <string name="user_pic">User picture</string>
    <string name="your_contributions">Vos Contributions</string>
    <string name="submit">soumettre</string>

    <string name="profile_tootlbar_title">Profil</string>
    <string name="make_contrib_tootlbar_title">Contribution</string>
    <string name="home_tootlbar_title">Accueil</string>
    <string name="type_label_add_sub">Type</string>
    <string name="description_label_add_sub">Description</string>
    <string name="desc_hint_contribution">Décrit ta contribution ici</string>
    <string name="description_addsubmission">Description</string>
    <string name="subject">Subject</string>
    <string name="type_addsubmission">Type</string>
    <string name="hint_contribution_description">Décrit ta contribution ici</string>

    <string name="guilds_points">%1$d pts</string>
    <string name="guild_empty_field">Vous devez remplir tous les champs !</string>
    <string name="submission_message">Votre Contribution est ajoutée</string>
    <string name="guild_network_error">Erreur de serveur, veuillez essayer plus tard.</string>
    <string name="guild_error">Veuillez essayer plus tard.</string>
    <string name="date_template">le %1$s à %2$s</string>

    <string name="article">Article</string>
    <string name="atelier_workshop">Atelier/Workshop </string>
    <string name="presentation">Présentation </string>
    <string name="breakfast_iscm">Petit déjeuner ISCM </string>
    <string name="contribution_project_OneISC">Contribution au projet de Transformation OneISC </string>
    <string name="english_participation">Participation Session Anglais </string>
    <string name="english_session_organisation">Organiser Session Anglais</string>
    <string name="meetup_organisation">Organiser un Meetup </string>
    <string name="creation_dt_asset">Création Asset DT </string>
    <string name="participation_dt_asset">Participation Asset DT </string>
    <string name="participation_innersource">Participation Innersource </string>
    <string name="user_error_msg">Error getting users</string>
    <string name="loading_submissions_msg">Loading Your Submissions…</string>
    <string name="contributions_empty">Pas de contributions</string>
    <string name="validate">Valider</string>
    <string name="validate_success_msg">Cette contribution est validée</string>
    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="lorem_medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="tv_contributions_total">Contributions Total</string>
    <string name="ntework_error_msg">Network Error</string>
    <string name="server_error_msg">Try later please</string>
    <string name="contributions_points">Points d\'activitée</string>
    <string name="by_label">Par:</string>
    <string name="guilde_label">Guilde:</string>
    <string name="cancel">Cancel</string>
    <string name="validate_msg">Cette contribution sera valider après la validation</string>
    <string name="validation_confirmation">Valider ?</string>

    <string-array name="submissions_types">
        <item>@string/article</item>
        <item>@string/atelier_workshop</item>
        <item>@string/presentation</item>
        <item>@string/breakfast_iscm</item>
        <item>@string/contribution_project_OneISC</item>
        <item>@string/english_participation</item>
        <item>@string/english_session_organisation</item>
        <item>@string/meetup_organisation</item>
        <item>@string/creation_dt_asset</item>
        <item>@string/participation_dt_asset</item>
        <item>@string/participation_innersource</item>
    </string-array>
</resources>
