<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:paddingLeft="@dimen/small"
    android:paddingRight="@dimen/small"
    tools:context=".ui.addsubmission.AddSubmissionFragment">

    <View
        android:id="@+id/view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_shape"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/mini"
        app:layout_constraintBottom_toBottomOf="@+id/ivGuildeInfo"
        app:layout_constraintEnd_toEndOf="@+id/tvGuildeInfoName"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/ivGuildeInfo"
        app:layout_constraintTop_toTopOf="@+id/ivGuildeInfo"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/ivGuildeInfo"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/mini"
        android:paddingStart="@dimen/mini"
        android:paddingLeft="@dimen/mini"
        android:paddingTop="@dimen/mini"
        android:paddingBottom="@dimen/mini"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/andromede"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvGuildeInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:paddingEnd="@dimen/small"
        android:paddingRight="@dimen/small"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textH2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@+id/view_container"
        tools:text="Andromede" />

    <TextView
        android:id="@+id/tvGuildInfoPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textH3"
        app:layout_constraintBottom_toBottomOf="@+id/ivGuildeInfo"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvGuildeInfoName"
        app:layout_constraintVertical_bias="0"
        tools:text="21 pts" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini"
        android:text="@string/subject"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/view_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSubject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/submission_text_background"
            android:hint="@string/subject"
            android:inputType="text"
            app:boxStrokeColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini"
        android:text="@string/type_addsubmission"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSubject" />

    <Spinner
        android:id="@+id/sp_types_submissions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini"
        android:background="@drawable/submission_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_height="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/mini"
        android:text="@string/description_addsubmission"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_types_submissions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/mini"
        android:layout_marginBottom="@dimen/large"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="description"
            android:background="@drawable/submission_text_background"
            android:gravity="top"
            android:hint="@string/hint_contribution_description"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="15dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large"
        android:background="@drawable/login_btn_background"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
