<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/small"
    android:paddingRight="@dimen/small"
    android:weightSum="100"
    tools:context=".ui.login.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginEnd="@dimen/logo_margin"
        android:layout_marginLeft="@dimen/logo_margin"
        android:layout_marginRight="@dimen/logo_margin"
        android:layout_weight="54"
        android:src="@drawable/logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/mini"
        android:layout_weight="8"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_text_background"
            android:drawableEnd="@drawable/ic_highlight_off_black_24dp"
            android:drawableRight="@drawable/ic_highlight_off_black_24dp"
            android:hint="@string/username"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/mini"
        android:layout_weight="8"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_text_background"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_weight="8"
        android:background="@drawable/login_btn_background"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

</LinearLayout>
