<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:paddingLeft="@dimen/small"
    android:paddingRight="@dimen/small"
    tools:context=".ui.login.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginLeft="@dimen/logo_margin"
        android:layout_marginTop="@dimen/mini"
        android:layout_marginEnd="@dimen/logo_margin"
        android:layout_marginRight="@dimen/logo_margin"
        android:layout_marginBottom="@dimen/mini"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/layoutUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/mini"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_text_background"
            android:drawableEnd="@drawable/ic_highlight_off_black_24dp"
            android:drawableRight="@drawable/ic_highlight_off_black_24dp"
            android:hint="@string/username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_text_background"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/large"
        android:background="@drawable/login_btn_background"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
