<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ver_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfileGuildeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:contentDescription="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/textH1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Point d'activite" />

    <View
        android:id="@+id/background_points"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_points"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tvProfileGuildePoints"
        app:layout_constraintEnd_toEndOf="@+id/star_ic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvProfileGuildePoints"
        app:layout_constraintTop_toTopOf="@+id/tvProfileGuildePoints"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvProfileGuildePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini"
        android:paddingLeft="@dimen/mini"
        android:paddingTop="@dimen/mini"
        android:paddingBottom="@dimen/mini"
        android:textColor="@color/colorH2"
        android:textSize="@dimen/textH2"
        app:layout_constraintEnd_toStartOf="@+id/star_ic"
        app:layout_constraintStart_toStartOf="@+id/tvProfileGuildeName"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileGuildeName"
        tools:text="300" />

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/mini"
        android:layout_marginLeft="@dimen/mini"
        android:layout_marginTop="@dimen/mini"
        android:layout_marginBottom="@dimen/mini"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="@+id/tvProfileGuildePoints"
        app:layout_constraintEnd_toStartOf="@+id/star_ic"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tvProfileGuildePoints"
        app:layout_constraintTop_toTopOf="@+id/tvProfileGuildePoints" />

    <ImageView
        android:id="@+id/star_ic"
        android:layout_width="@dimen/width_height_icon"
        android:layout_height="@dimen/width_height_icon"
        android:contentDescription="@string/app_name"
        android:paddingEnd="@dimen/mini"
        android:paddingRight="@dimen/mini"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/tvProfileGuildePoints"
        app:layout_constraintEnd_toEndOf="@+id/tvProfileGuildeName"
        app:layout_constraintStart_toEndOf="@+id/tvProfileGuildePoints"
        app:layout_constraintTop_toTopOf="@+id/tvProfileGuildePoints" />

    <TextView
        android:id="@+id/tvContribLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="Par: " />

    <TextView
        android:id="@+id/tvContrib"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/tvContribLabel"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="Amine Karimi" />

    <TextView
        android:id="@+id/tvGuildLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/textH3"
        app:layout_constraintBottom_toBottomOf="@+id/tvGuildName"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="Guilde: " />

    <TextView
        android:id="@+id/tvGuildName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toEndOf="@+id/tvGuildLabel"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="Andromede" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:textColor="@color/white"
        android:textSize="@dimen/textH1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvContrib"
        tools:text="Presentation de securite dans android" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:textColor="@color/white"
        android:textSize="@dimen/textH2"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/lorem_medium" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnInvalid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginEnd="@dimen/mini"
        android:layout_marginRight="@dimen/mini"
        android:layout_marginBottom="@dimen/large"
        android:background="@color/gradEnd"
        android:text="Delete"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnValidate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnValidate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini"
        android:layout_marginLeft="@dimen/mini"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/large"
        android:background="@drawable/login_btn_background"
        android:text="@string/validate"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnInvalid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/small" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
